fix text alignment issue

--- a/app/(main-website)/globals.css
+++ b/app/(main-website)/globals.css
@@ -2688,7 +2688,7 @@
   }
 
   .animatee-marquee {
-    animation: scroll 30s linear infinite; /* adjust duration for speed */
+    animation: scroll 40s linear infinite; /* adjust duration for speed */
   }
 
   @media (max-width: 640px) {
